tdf#161256 gtk4 a11y: Don't crash on missing context or invalid child index

If an `XAccessible` doesn't have a context or
`XAccessibleContext::getAccessibleIndexInParent()` returns
an invalid index of -1, don't crash/assert, but
let `lo_accessible_get_next_accessible_sibling` return
`nullptr`.

This works around potential bugs in underlying
`XAccessible`/`XAccessibleContext` implementations for now.

This is meant to fix the assert/crash seen in the backtraces
attachment 196363 and attachment 196383 from tdf#161256
which I cannot reproduce locally on Debian testing.

Change-Id: Ic1779d875161469bf296c558039e19f1d426a259
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173216
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>